# game-toolbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md
src/game_toolbox/: __init__.py  __main__.py
src/game_toolbox/cli/: main.py
src/game_toolbox/core/: base_tool.py  config.py  datatypes.py  events.py  exceptions.py  pipeline.py  registry.py
src/game_toolbox/gui/: app.py  main_window.py  pipeline_editor.py  tool_page.py
src/game_toolbox/gui/widgets/: file_picker.py  format_selector.py  multi_path_picker.py  param_form.py  progress_panel.py
src/game_toolbox/tools/animation_cropper/: README.md  __init__.py  logic.py  tool.py
src/game_toolbox/tools/animation_cropper/tests/: test_logic.py  test_tool.py
src/game_toolbox/tools/atlas_unpacker/: README.md  __init__.py  _ccz.py  _plist.py  _pvr.py  logic.py  tool.py
src/game_toolbox/tools/atlas_unpacker/tests/: test_logic.py  test_tool.py
src/game_toolbox/tools/chroma_key/: README.md  __init__.py  logic.py  tool.py
src/game_toolbox/tools/chroma_key/tests/: test_logic.py  (+1 more)
src/game_toolbox/tools/frame_extractor/: README.md  __init__.py  extract_frames_legacy.py  logic.py  tool.py
src/game_toolbox/tools/image_resizer/: README.md  __init__.py  logic.py  tool.py
src/game_toolbox/tools/sprite_extractor/: README.md  __init__.py  logic.py  tool.py
src/game_toolbox/tools/sprite_sheet/: README.md  __init__.py  logic.py  tool.py
tests/: conftest.py  test_cli.py  test_config.py  test_events.py  test_gui_main.py  test_gui_widgets.py  test_pipeline.py  test_registry.py
(+8 files in other folders)
